fixed fonts location

--- a/rftg.html
+++ b/rftg.html
@@ -13,11 +13,11 @@
     <style>
 @font-face {
     font-family: Oswald;
-    src: url(Oswald-Regular.ttf);
+    src: url(fonts/Oswald-Regular.ttf);
 }
 @font-face {
     font-family: Oswald;
-    src: url(Oswald-DemiBold.ttf);
+    src: url(fonts/Oswald-DemiBold.ttf);
     font-weight: bold;
 }
       body {
